objects/Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>This field stores the name of the class from where the integration is launched</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <description>This field holds the value of the request received</description>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <description>This field holds the response created</description>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>This field holds the status code of the API call</description>
        <label>Status Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The direction of the call is stored in this field</description>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>This field hold the URL of the call</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>